# lingappbackend

./: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  schema.sql
app/: __init__.py  main.py
app/core/: config.py  security.py
app/models/: schemas.py  subscription.py
app/routers/: auth.py  cards.py  chat.py  materials.py  payments.py  quizzes.py
app/services/: chat.py  doc_parser.py  quiz.py  subscription.py  vocabulary.py  yt_parser.py
docs/plans/: 2026-01-20-stripe-payments-design.md  2026-01-20-stripe-payments-implementation.md
migrations/: 002_add_quizzes_and_chat.sql
