[tool.poetry]
name = "linguamind-backend"
version = "0.1.0"
description = "LinguaMind - Language learning through content consumption"
authors = ["LinguaMind Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
supabase = "^2.3.0"
openai = "^1.10.0"
docling = "^2.0.0"
youtube-transcript-api = "^0.6.2"
yt-dlp = "^2024.1.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
